tests-integration/fixtures/checking/1772565480_derive_traversable_missing_superclass/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
Compose ::
  forall (t :: Type) (t1 :: Type) (@f :: (t :: Type) -> Type) (@g :: (t1 :: Type) -> (t :: Type))
    (@a :: (t1 :: Type)).
    (f :: (t :: Type) -> Type) ((g :: (t1 :: Type) -> (t :: Type)) (a :: (t1 :: Type))) ->
    Compose @(t :: Type) @(t1 :: Type)
      (f :: (t :: Type) -> Type)
      (g :: (t1 :: Type) -> (t :: Type))
      (a :: (t1 :: Type))

Types
Compose ::
  forall (t :: Type) (t1 :: Type).
    ((t :: Type) -> Type) -> ((t1 :: Type) -> (t :: Type)) -> (t1 :: Type) -> Type

Derived
derive forall (t :: Type -> Type) (t1 :: Type -> Type).
  Traversable (t :: Type -> Type) =>
  Traversable (t1 :: Type -> Type) =>
  Traversable (Compose @Type @Type (t :: Type -> Type) (t1 :: Type -> Type))

Roles
Compose = [Representational, Representational, Nominal]

Diagnostics
error[NoInstanceFound]: No instance found for: Functor (Compose @Type @Type (t :: Type -> Type) (t1 :: Type -> Type))
  --> 6:1..6:76
  |
6 | derive instance (Traversable f, Traversable g) => Traversable (Compose f g)
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  trivia: Traversable (t :: Type -> Type) is in scope
  trivia: Traversable (t1 :: Type -> Type) is in scope
  trivia: Functor (t :: Type -> Type) is in scope
  trivia: Foldable (t :: Type -> Type) is in scope
  trivia: Functor (t1 :: Type -> Type) is in scope
  trivia: Foldable (t1 :: Type -> Type) is in scope
error[NoInstanceFound]: No instance found for: Foldable (Compose @Type @Type (t :: Type -> Type) (t1 :: Type -> Type))
  --> 6:1..6:76
  |
6 | derive instance (Traversable f, Traversable g) => Traversable (Compose f g)
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  trivia: Traversable (t :: Type -> Type) is in scope
  trivia: Traversable (t1 :: Type -> Type) is in scope
  trivia: Functor (t :: Type -> Type) is in scope
  trivia: Foldable (t :: Type -> Type) is in scope
  trivia: Functor (t1 :: Type -> Type) is in scope
  trivia: Foldable (t1 :: Type -> Type) is in scope
